# Mendel-s-Greenhouse

./: .aiignore  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  DESIGN.md  Implementation Plan.md  README.md  docker-compose.yml  experiment_analyzer.py  experiment_analyzer_panel.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yaml  deploy-coolify.yaml
agent-memory/: backlog.md  commands.md  decisions.md  index.md  open-questions.md  project-state.md  ui-component-refactor-plan.md
docs/deployment/: vps.md
game/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
game/mendels_greenhouse/: __init__.py  main.py
game/mendels_greenhouse/assets/: README.md  mendel_5x7.bdf  mendels_greenhouse.pyxres
game/mendels_greenhouse/core/: collection.py  content.py  contracts.py  genetics.py  greenhouse.py  i18n.py  save_data.py
game/mendels_greenhouse/locale/: messages.pot
game/mendels_greenhouse/locale/en/LC_MESSAGES/: mendels_greenhouse.mo  mendels_greenhouse.po
game/mendels_greenhouse/locale/pt_BR/LC_MESSAGES/: mendels_greenhouse.mo  mendels_greenhouse.po
game/mendels_greenhouse/scenes/: __init__.py  base.py  main_game.py
game/mendels_greenhouse/services/: __init__.py  breeding_service.py  greenhouse_service.py  music.py  save_service.py
game/mendels_greenhouse/state/: game_state.py
game/mendels_greenhouse/ui/: components.py  fonts.py  palette.py
game/mendels_greenhouse/ui/game_components/: __init__.py  contract_summary.py  germination_bed.py  plant_info.py  shared.py
game/mendels_greenhouse/ui/game_components/collection/: __init__.py  screen.py
game/mendels_greenhouse/ui/game_components/contracts/: __init__.py  screen.py
game/mendels_greenhouse/ui/game_components/garden/: __init__.py  screen.py
game/mendels_greenhouse/ui/game_components/knowledge/: __init__.py  screen.py
game/mendels_greenhouse/ui/game_components/main_game/: __init__.py  analyzer_panel.py  chrome.py  contract_banner.py  germination_bed_panel.py  greenhouse_background.py  navigation_rail.py  parent_cross_panel.py  specimen_overlay.py  top_bar.py
game/mendels_greenhouse/ui/game_components/overlays/: __init__.py  runtime.py
game/mendels_greenhouse/ui/game_components/settings/: __init__.py  overlay.py
game/mendels_greenhouse/ui/game_components/shop/: __init__.py  screen.py
game/mendels_greenhouse/ui/widgets/: __init__.py  progress_bar.py  trait_badge.py
game/scripts/: build-web.sh
game/tests/unit/: test_collection_album.py  test_font_assets.py  test_game_state.py  test_genetics.py  test_genetics_properties.py  test_germination_selection.py  test_i18n.py  test_project_style.py  test_runtime_overlays.py
game/tools/: build_assets.py  harden_web_html.py
specs/: GBD.md  GDD.md  README.md  SCREEN_SPEC.md  UI_FLOW.md
specs/content/: README.md  content-bible.md
specs/education/: README.md  learning-objectives.md
specs/mechanics/: README.md  (+5 more)
(+98 files in other folders)
